# vcpkg-harbor

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.simple.yml  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run.bat  run.sh
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker-image.yml  docs.yml  release.yml
app/: __init__.py
app/api/: models.py  routes.py
app/core/: config.py  logging.py
app/storage/: backend.py  base.py  file.py  minio.py
docs/: api-reference.md  astro.config.mjs  index.md  package-lock.json  package.json
docs/.astro/: content-modules.mjs
docs/deployment/: docker.md  kubernetes.md
docs/development/: architecture.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/public/: CNAME
docs/src/content/docs/: api-reference.mdx  index.mdx
docs/src/content/docs/deployment/: docker.mdx  kubernetes.mdx
docs/src/styles/: custom.css
docs/user-guide/: authentication.md  dashboard.md  metrics.md  storage-backends.md
overrides/: main.html
overrides/assets/javascripts/: extra.js
overrides/assets/stylesheets/: extra.css
overrides/partials/: copyright.html
scripts/: dev-server.sh  docker-dev.sh  docs.sh  lint.sh  setup-dev.sh  test.sh
src/vcpkg_harbor/: __init__.py  __main__.py  app.py
src/vcpkg_harbor/api/: __init__.py  cache.py  health.py  metrics.py
src/vcpkg_harbor/auth/: __init__.py  middleware.py  providers.py
src/vcpkg_harbor/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py
src/vcpkg_harbor/dashboard/: __init__.py  router.py
src/vcpkg_harbor/dashboard/templates/: 404.html  base.html  index.html  package_detail.html  packages.html  stats.html
src/vcpkg_harbor/services/: __init__.py  cache_service.py  package_service.py  stats_service.py
src/vcpkg_harbor/static/css/: style.css
src/vcpkg_harbor/static/js/: app.js
src/vcpkg_harbor/storage/: __init__.py  base.py  registry.py
src/vcpkg_harbor/storage/backends/: __init__.py  azure.py  filesystem.py  gcs.py  minio.py  s3.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_config.py  test_health.py  test_package_service.py  test_storage.py
(+12 files in other folders)
